[project]
name = "github-blog"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "geoqiao", email = "realvincentqiao@gmail.com" }
]
dependencies = [
    "jinja2>=3.1.3",
    "marko[codehilite]>=2.0.3",
    "feedgen>=1.0.0",
    "pygithub>=2.3.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
